language/dnpMD-Language/gen/de/twainsoft/dnpMD/dnpMDParser.js
// Generated from E:/Git/dnpMD/language/dnpMD-Language/src/de/twainsoft/dnpMD/grammar\dnpMDParser.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var dnpMDParserListener = require('./dnpMDParserListener').dnpMDParserListener;
var dnpMDParserVisitor = require('./dnpMDParserVisitor').dnpMDParserVisitor;

var grammarFileName = "dnpMDParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, null, null, "'{=== ===}'", 
                     null, null, null, null, null, null, null, null, null, 
                     "'*'", "'{'" ];

var symbolicNames = [ null, "NL", "SUBHEADLINE", "HEADLINE", "LEAD", "SUBHEADING", 
                      "CAPTION", "TAIL", "LISTING", "ELEMENTPATH", "LABELREF", 
                      "LABEL", "LITERATURE_CONTENT", "AUTHOR_BIO", "ITALIC", 
                      "SINGLE_COMMENT", "MULTI_COMMENT", "STAR", "BRACE_OPEN", 
                      "TEXT" ];

var ruleNames =  [ "dnpMD", "head", "subheadline", "headline", "lead", "subheading", 
                   "caption", "listing", "image", "listingPath", "imagePath", 
                   "labelRef", "label", "italic", "paragraph", "newline", 
                   "newlines", "body", "bodyElements", "tail", "literatureEntries", 
                   "authorBio", "literatureEntry" ];

function dnpMDParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

dnpMDParser.prototype = Object.create(antlr4.Parser.prototype);
dnpMDParser.prototype.constructor = dnpMDParser;

Object.defineProperty(dnpMDParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

dnpMDParser.EOF = antlr4.Token.EOF;
dnpMDParser.NL = 1;
dnpMDParser.SUBHEADLINE = 2;
dnpMDParser.HEADLINE = 3;
dnpMDParser.LEAD = 4;
dnpMDParser.SUBHEADING = 5;
dnpMDParser.CAPTION = 6;
dnpMDParser.TAIL = 7;
dnpMDParser.LISTING = 8;
dnpMDParser.ELEMENTPATH = 9;
dnpMDParser.LABELREF = 10;
dnpMDParser.LABEL = 11;
dnpMDParser.LITERATURE_CONTENT = 12;
dnpMDParser.AUTHOR_BIO = 13;
dnpMDParser.ITALIC = 14;
dnpMDParser.SINGLE_COMMENT = 15;
dnpMDParser.MULTI_COMMENT = 16;
dnpMDParser.STAR = 17;
dnpMDParser.BRACE_OPEN = 18;
dnpMDParser.TEXT = 19;

dnpMDParser.RULE_dnpMD = 0;
dnpMDParser.RULE_head = 1;
dnpMDParser.RULE_subheadline = 2;
dnpMDParser.RULE_headline = 3;
dnpMDParser.RULE_lead = 4;
dnpMDParser.RULE_subheading = 5;
dnpMDParser.RULE_caption = 6;
dnpMDParser.RULE_listing = 7;
dnpMDParser.RULE_image = 8;
dnpMDParser.RULE_listingPath = 9;
dnpMDParser.RULE_imagePath = 10;
dnpMDParser.RULE_labelRef = 11;
dnpMDParser.RULE_label = 12;
dnpMDParser.RULE_italic = 13;
dnpMDParser.RULE_paragraph = 14;
dnpMDParser.RULE_newline = 15;
dnpMDParser.RULE_newlines = 16;
dnpMDParser.RULE_body = 17;
dnpMDParser.RULE_bodyElements = 18;
dnpMDParser.RULE_tail = 19;
dnpMDParser.RULE_literatureEntries = 20;
dnpMDParser.RULE_authorBio = 21;
dnpMDParser.RULE_literatureEntry = 22;

function DnpMDContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_dnpMD;
    return this;
}

DnpMDContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DnpMDContext.prototype.constructor = DnpMDContext;

DnpMDContext.prototype.head = function() {
    return this.getTypedRuleContext(HeadContext,0);
};

DnpMDContext.prototype.body = function() {
    return this.getTypedRuleContext(BodyContext,0);
};

DnpMDContext.prototype.tail = function() {
    return this.getTypedRuleContext(TailContext,0);
};

DnpMDContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterDnpMD(this);
	}
};

DnpMDContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitDnpMD(this);
	}
};

DnpMDContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitDnpMD(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.DnpMDContext = DnpMDContext;

dnpMDParser.prototype.dnpMD = function() {

    var localctx = new DnpMDContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, dnpMDParser.RULE_dnpMD);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 46;
        this.head();
        this.state = 47;
        this.body();
        this.state = 49;
        _la = this._input.LA(1);
        if(_la===dnpMDParser.TAIL) {
            this.state = 48;
            this.tail();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HeadContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_head;
    return this;
}

HeadContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HeadContext.prototype.constructor = HeadContext;

HeadContext.prototype.subheadline = function() {
    return this.getTypedRuleContext(SubheadlineContext,0);
};

HeadContext.prototype.headline = function() {
    return this.getTypedRuleContext(HeadlineContext,0);
};

HeadContext.prototype.lead = function() {
    return this.getTypedRuleContext(LeadContext,0);
};

HeadContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterHead(this);
	}
};

HeadContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitHead(this);
	}
};

HeadContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitHead(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.HeadContext = HeadContext;

dnpMDParser.prototype.head = function() {

    var localctx = new HeadContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, dnpMDParser.RULE_head);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 51;
        this.subheadline();
        this.state = 52;
        this.headline();
        this.state = 53;
        this.lead();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SubheadlineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_subheadline;
    return this;
}

SubheadlineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SubheadlineContext.prototype.constructor = SubheadlineContext;

SubheadlineContext.prototype.SUBHEADLINE = function() {
    return this.getToken(dnpMDParser.SUBHEADLINE, 0);
};

SubheadlineContext.prototype.newlines = function() {
    return this.getTypedRuleContext(NewlinesContext,0);
};

SubheadlineContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterSubheadline(this);
	}
};

SubheadlineContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitSubheadline(this);
	}
};

SubheadlineContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitSubheadline(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.SubheadlineContext = SubheadlineContext;

dnpMDParser.prototype.subheadline = function() {

    var localctx = new SubheadlineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, dnpMDParser.RULE_subheadline);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 55;
        this.match(dnpMDParser.SUBHEADLINE);
        this.state = 56;
        this.newlines();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HeadlineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_headline;
    return this;
}

HeadlineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HeadlineContext.prototype.constructor = HeadlineContext;

HeadlineContext.prototype.HEADLINE = function() {
    return this.getToken(dnpMDParser.HEADLINE, 0);
};

HeadlineContext.prototype.newlines = function() {
    return this.getTypedRuleContext(NewlinesContext,0);
};

HeadlineContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterHeadline(this);
	}
};

HeadlineContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitHeadline(this);
	}
};

HeadlineContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitHeadline(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.HeadlineContext = HeadlineContext;

dnpMDParser.prototype.headline = function() {

    var localctx = new HeadlineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, dnpMDParser.RULE_headline);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 58;
        this.match(dnpMDParser.HEADLINE);
        this.state = 59;
        this.newlines();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LeadContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_lead;
    return this;
}

LeadContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LeadContext.prototype.constructor = LeadContext;

LeadContext.prototype.LEAD = function() {
    return this.getToken(dnpMDParser.LEAD, 0);
};

LeadContext.prototype.newlines = function() {
    return this.getTypedRuleContext(NewlinesContext,0);
};

LeadContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterLead(this);
	}
};

LeadContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitLead(this);
	}
};

LeadContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitLead(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.LeadContext = LeadContext;

dnpMDParser.prototype.lead = function() {

    var localctx = new LeadContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, dnpMDParser.RULE_lead);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 61;
        this.match(dnpMDParser.LEAD);
        this.state = 62;
        this.newlines();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SubheadingContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_subheading;
    return this;
}

SubheadingContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SubheadingContext.prototype.constructor = SubheadingContext;

SubheadingContext.prototype.SUBHEADING = function() {
    return this.getToken(dnpMDParser.SUBHEADING, 0);
};

SubheadingContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterSubheading(this);
	}
};

SubheadingContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitSubheading(this);
	}
};

SubheadingContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitSubheading(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.SubheadingContext = SubheadingContext;

dnpMDParser.prototype.subheading = function() {

    var localctx = new SubheadingContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, dnpMDParser.RULE_subheading);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 64;
        this.match(dnpMDParser.SUBHEADING);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function CaptionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_caption;
    return this;
}

CaptionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CaptionContext.prototype.constructor = CaptionContext;

CaptionContext.prototype.CAPTION = function() {
    return this.getToken(dnpMDParser.CAPTION, 0);
};

CaptionContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterCaption(this);
	}
};

CaptionContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitCaption(this);
	}
};

CaptionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitCaption(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.CaptionContext = CaptionContext;

dnpMDParser.prototype.caption = function() {

    var localctx = new CaptionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, dnpMDParser.RULE_caption);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 66;
        this.match(dnpMDParser.CAPTION);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ListingContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_listing;
    return this;
}

ListingContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ListingContext.prototype.constructor = ListingContext;

ListingContext.prototype.LISTING = function() {
    return this.getToken(dnpMDParser.LISTING, 0);
};

ListingContext.prototype.newline = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(NewlineContext);
    } else {
        return this.getTypedRuleContext(NewlineContext,i);
    }
};

ListingContext.prototype.caption = function() {
    return this.getTypedRuleContext(CaptionContext,0);
};

ListingContext.prototype.listingPath = function() {
    return this.getTypedRuleContext(ListingPathContext,0);
};

ListingContext.prototype.label = function() {
    return this.getTypedRuleContext(LabelContext,0);
};

ListingContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterListing(this);
	}
};

ListingContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitListing(this);
	}
};

ListingContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitListing(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.ListingContext = ListingContext;

dnpMDParser.prototype.listing = function() {

    var localctx = new ListingContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, dnpMDParser.RULE_listing);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 68;
        this.match(dnpMDParser.LISTING);
        this.state = 72;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        if(la_===1) {
            this.state = 69;
            this.newline();
            this.state = 70;
            this.listingPath();

        }
        this.state = 77;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        if(la_===1) {
            this.state = 74;
            this.newline();
            this.state = 75;
            this.label();

        }
        this.state = 79;
        this.newline();
        this.state = 80;
        this.caption();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ImageContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_image;
    return this;
}

ImageContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ImageContext.prototype.constructor = ImageContext;

ImageContext.prototype.caption = function() {
    return this.getTypedRuleContext(CaptionContext,0);
};

ImageContext.prototype.newline = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(NewlineContext);
    } else {
        return this.getTypedRuleContext(NewlineContext,i);
    }
};

ImageContext.prototype.label = function() {
    return this.getTypedRuleContext(LabelContext,0);
};

ImageContext.prototype.imagePath = function() {
    return this.getTypedRuleContext(ImagePathContext,0);
};

ImageContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterImage(this);
	}
};

ImageContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitImage(this);
	}
};

ImageContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitImage(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.ImageContext = ImageContext;

dnpMDParser.prototype.image = function() {

    var localctx = new ImageContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, dnpMDParser.RULE_image);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 82;
        this.caption();
        this.state = 86;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        if(la_===1) {
            this.state = 83;
            this.newline();
            this.state = 84;
            this.label();

        }
        this.state = 91;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        if(la_===1) {
            this.state = 88;
            this.newline();
            this.state = 89;
            this.imagePath();

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ListingPathContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_listingPath;
    return this;
}

ListingPathContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ListingPathContext.prototype.constructor = ListingPathContext;

ListingPathContext.prototype.ELEMENTPATH = function() {
    return this.getToken(dnpMDParser.ELEMENTPATH, 0);
};

ListingPathContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterListingPath(this);
	}
};

ListingPathContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitListingPath(this);
	}
};

ListingPathContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitListingPath(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.ListingPathContext = ListingPathContext;

dnpMDParser.prototype.listingPath = function() {

    var localctx = new ListingPathContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, dnpMDParser.RULE_listingPath);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 93;
        this.match(dnpMDParser.ELEMENTPATH);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ImagePathContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_imagePath;
    return this;
}

ImagePathContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ImagePathContext.prototype.constructor = ImagePathContext;

ImagePathContext.prototype.ELEMENTPATH = function() {
    return this.getToken(dnpMDParser.ELEMENTPATH, 0);
};

ImagePathContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterImagePath(this);
	}
};

ImagePathContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitImagePath(this);
	}
};

ImagePathContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitImagePath(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.ImagePathContext = ImagePathContext;

dnpMDParser.prototype.imagePath = function() {

    var localctx = new ImagePathContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, dnpMDParser.RULE_imagePath);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 95;
        this.match(dnpMDParser.ELEMENTPATH);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LabelRefContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_labelRef;
    return this;
}

LabelRefContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LabelRefContext.prototype.constructor = LabelRefContext;

LabelRefContext.prototype.LABELREF = function() {
    return this.getToken(dnpMDParser.LABELREF, 0);
};

LabelRefContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterLabelRef(this);
	}
};

LabelRefContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitLabelRef(this);
	}
};

LabelRefContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitLabelRef(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.LabelRefContext = LabelRefContext;

dnpMDParser.prototype.labelRef = function() {

    var localctx = new LabelRefContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, dnpMDParser.RULE_labelRef);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 97;
        this.match(dnpMDParser.LABELREF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LabelContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_label;
    return this;
}

LabelContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LabelContext.prototype.constructor = LabelContext;

LabelContext.prototype.LABEL = function() {
    return this.getToken(dnpMDParser.LABEL, 0);
};

LabelContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterLabel(this);
	}
};

LabelContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitLabel(this);
	}
};

LabelContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitLabel(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.LabelContext = LabelContext;

dnpMDParser.prototype.label = function() {

    var localctx = new LabelContext(this, this._ctx, this.state);
    this.enterRule(localctx, 24, dnpMDParser.RULE_label);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 99;
        this.match(dnpMDParser.LABEL);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ItalicContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_italic;
    return this;
}

ItalicContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ItalicContext.prototype.constructor = ItalicContext;

ItalicContext.prototype.ITALIC = function() {
    return this.getToken(dnpMDParser.ITALIC, 0);
};

ItalicContext.prototype.enterRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.enterItalic(this);
	}
};

ItalicContext.prototype.exitRule = function(listener) {
    if(listener instanceof dnpMDParserListener ) {
        listener.exitItalic(this);
	}
};

ItalicContext.prototype.accept = function(visitor) {
    if ( visitor instanceof dnpMDParserVisitor ) {
        return visitor.visitItalic(this);
    } else {
        return visitor.visitChildren(this);
    }
};




dnpMDParser.ItalicContext = ItalicContext;

dnpMDParser.prototype.italic = function() {

    var localctx = new ItalicContext(this, this._ctx, this.state);
    this.enterRule(localctx, 26, dnpMDParser.RULE_italic);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 101;
        this.match(dnpMDParser.ITALIC);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ParagraphContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = dnpMDParser.RULE_paragraph;
    return this;
}

ParagraphContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParagraphContext.prototype.constructor = ParagraphContext;

ParagraphContext.prototype.italic = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ItalicContext);
    } else {
        return this.getTypedRuleContext(ItalicContext,i);
    }
};
